syntax = "proto3";
package nexus.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/nexus/types";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "nexus/exported/v1beta1/types.proto";

option (gogoproto.goproto_getters_all) = false;

message RegisterChainMaintainerRequest {
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  repeated string chains = 2;
}

message RegisterChainMaintainerResponse {}

message DeregisterChainMaintainerRequest {
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  repeated string chains = 2;
}

message DeregisterChainMaintainerResponse {}

// ActivateChainRequest represents a message to activate chains
message ActivateChainRequest {
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  repeated string chains = 2;
}

message ActivateChainResponse {}

// DeactivateChainRequest represents a message to deactivate chains
message DeactivateChainRequest {
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  repeated string chains = 2;
}

message DeactivateChainResponse {}

// RegisterAssetFeeRequest represents a message to register the transfer fee
// info associated to an asset on a chain
message RegisterAssetFeeRequest {
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  nexus.exported.v1beta1.FeeInfo fee_info = 2 [ (gogoproto.nullable) = false ];
}

message RegisterAssetFeeResponse {}
